# TES5-DynamicWetness

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PCH.h  README.md  vcpkg.json
include/: Main.h  OverlayMgr.h  PapyrusAPI.h  Settings.h  UI.h  WetController.h
include/interfaces/: DynamicWetness_PublicAPI.h  DynamicWetness_PublicAPI.pex  DynamicWetness_publicAPI.psc  SWE.pex  SWE.psc
include/utils/: Utils.h
src/: Main.cpp  OverlayMgr.cpp  PapyrusAPI.cpp  Settings.cpp  UI.cpp  WetController.cpp
src/utils/: Utils.cpp
